# rust-hash-finder

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: cli_test.rs  integration_test.rs
