[package]
name = "rust-hash-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
rayon = "1.10"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["crossbeam"]
crossbeam = []
atomics = []

